# Alloc_r

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: c-cpp.yml
src/: Allocator.h  MyList.cpp  MyList.h  main  main.cpp  version.h.in
